Add separate arm64 Dockerfile
This is needed as there is currently no arm64 package for snapcast.

--- a/.drone.yml
+++ b/.drone.yml
@@ -60,6 +60,7 @@ steps:
       auto_tag: true
       auto_tag_suffix: arm64
       repo: mazzolino/librespot-snapserver
+      dockerfile: Dockerfile.arm64
       username:
         from_secret: docker_username
       password:
