--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,13 +1,13 @@
-FROM rust:1.42 AS librespot
+FROM rust:1.45 AS librespot
 
 RUN apt-get update \
  && apt-get -y install build-essential portaudio19-dev curl \
  && apt-get clean && rm -fR /var/lib/apt/lists
 
-ARG LIBRESPOT_VERSION=0.1.1
+ARG LIBRESPOT_VERSION=0.1.3
 
 RUN cd /tmp \
- && curl -sLO https://github.com/librespot-org/librespot/archive/v0.1.1.zip \
+ && curl -sLO https://github.com/librespot-org/librespot/archive/v${LIBRESPOT_VERSION}.zip \
  && unzip v${LIBRESPOT_VERSION}.zip \
  && mv librespot-${LIBRESPOT_VERSION} librespot \
  && cd librespot \
