Build armhf image with explicit arm32v7 base image
This is needed as we are building on on arm64 host.

--- a/.drone.yml
+++ b/.drone.yml
@@ -40,6 +40,7 @@ steps:
       auto_tag: true
       auto_tag_suffix: arm
       repo: mazzolino/librespot-snapserver
+      dockerfile: Dockerfile.armhf
       username:
         from_secret: docker_username
       password:
@@ -66,6 +67,7 @@ steps:
       auto_tag: true
       auto_tag_suffix: arm64
       repo: mazzolino/librespot-snapserver
+      dockerfile: Dockerfile.arm64
       username:
         from_secret: docker_username
       password:
